--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.13.2",
+    "firebase": "^7.14.2",
     "firebase-tools": "^8.0.2",
     "random-number": "0.0.9",
     "react": "^16.13.1",
+    "react-contenteditable": "^3.3.4",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.0.1"
